--- a/NutrientDataCollectionApp/app/src/main/res/layout/activity_home.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/layout/activity_home.xml
@@ -1,53 +1,83 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:orientation="horizontal"
-
-    tools:showIn="@layout/activity_my">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_history"
-        android:onClick="goToHistory"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
-        </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_new"
-        android:onClick="goToNewSample"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        />
+android:orientation="vertical"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+    >
+<TableLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:stretchColumns="*"
+    >
+    <TableRow
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button android:text="History" android:layout_width="fill_parent" android:layout_height="fill_parent"
+            android:onClick="goToHistory"/>
+    </TableRow>
+    <TableRow
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button android:text="New Sample" android:layout_width="fill_parent" android:layout_height="fill_parent"
+            android:onClick="goToNewSample"/>
+    </TableRow>
+    <TableRow
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button android:text="Tutorial" android:layout_width="fill_parent" android:layout_height="fill_parent"
+            android:onClick="goToTutorial"/>
+    </TableRow>
+</TableLayout>
 </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tutorial"
-                android:onClick="goToTutorial"
-                android:layout_below="@+id/button2"
-                android:layout_centerHorizontal="true"
-                />
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal"
+
+        tools:showIn="@layout/activity_my">
+
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:orientation="vertical">
+           <Button
+               android:id="@+id/button1"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_weight="0.33"
+               android:text="@string/button_history"
+               android:onClick="goToHistory"
+               android:layout_alignParentTop="true"
+               android:layout_centerHorizontal="true"/>
+              </LinearLayout>
+          <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+           <Button
+               android:id="@+id/button2"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_weight="0.33"
+               android:text="@string/button_new"
+               android:onClick="goToNewSample"
+               android:layout_below="@+id/button1"
+               android:layout_centerHorizontal="true"
+               />
+       </LinearLayout>
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:orientation="vertical">
+                   <Button
+                       android:layout_width="match_parent"
+                       android:layout_height="0dp"
+                       android:layout_weight="0.33"
+                       android:text="Tutorial"
+                       android:onClick="goToTutorial"
+                       android:layout_below="@+id/button2"
+                       android:layout_centerHorizontal="true"
+                       />
+               </LinearLayout>
+       </LinearLayout>-->
