--- a/NutrientDataCollectionApp/app/src/main/res/layout/activity_map.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/layout/activity_map.xml
@@ -4,12 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ndca.nutrientdatacollectionapp.HistoryActivity">
+    tools:context="com.ndca.nutrientdatacollectionapp.MapActivity">
 
-    <TextView android:text="@string/history_title" android:layout_width="wrap_content"
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <Button android:text="Map" android:layout_width="fill_parent" android:layout_height="fill_parent"
-        android:onClick="goToMap"/>
 
 </RelativeLayout>
