--- a/NutrientDataCollectionApp/app/src/main/res/drawable/circle.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/drawable/circle.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#fff" />
-    <corners android:radius="30dp"></corners>
+    <solid android:color="#a0d" />
+    <corners android:radius="30dp"/>
+    <size android:height="30dp"
+        android:width="30dp"></size>
+    <stroke android:color="#a0d">
+
+    </stroke>
 </shape>
