--- a/NutrientDataCollectionApp/app/src/main/res/layout/activity_history.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/layout/activity_history.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,10 +6,88 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ndca.nutrientdatacollectionapp.HistoryActivity">
 
-    <TextView android:text="@string/history_title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    &lt;!&ndash;<TextView android:text="@string/history_title" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />&ndash;&gt;
 
-    <Button android:text="Map" android:layout_width="fill_parent" android:layout_height="fill_parent"
-        android:onClick="goToMap"/>
+    &lt;!&ndash;<Button android:text="Map" android:textSize="50dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
+        android:onClick="goToMap" android:scaleY=".25"/>&ndash;&gt;
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"
+        android:background="#a0d"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"
+        android:background="#b1c"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"
+        android:background="#c2b"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"
+        android:background="#d3a"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:gravity="center"
+        android:background="#e49"/>
+
+
+</RelativeLayout>-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/custom_toast_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#CD96CD"
+        android:text="TEXT" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="#CD96CD"
+            android:text="TEXT" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="#000000" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="#CD96CD"
+            android:text="TEXT" />
+    </LinearLayout>
+
+</LinearLayout>
