--- a/NutrientDataCollectionApp/app/src/main/res/layout/activity_new_sample.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/layout/activity_new_sample.xml
@@ -15,6 +15,8 @@
         android:scaleY="4"
         android:scaleX="2"
         android:layout_marginTop="125dp"
+        android:onClick="goToSample"
         />
+
 
 </RelativeLayout>
