--- a/NutrientDataCollectionApp/app/src/main/res/layout/activity_history.xml
+++ b/NutrientDataCollectionApp/app/src/main/res/layout/activity_history.xml
@@ -1,50 +1,4 @@
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ndca.nutrientdatacollectionapp.HistoryActivity">
 
-    &lt;!&ndash;<TextView android:text="@string/history_title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />&ndash;&gt;
-
-    &lt;!&ndash;<Button android:text="Map" android:textSize="50dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
-        android:onClick="goToMap" android:scaleY=".25"/>&ndash;&gt;
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:background="#a0d"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:background="#b1c"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:background="#c2b"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:background="#d3a"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:background="#e49"/>
-
-
-</RelativeLayout>-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/custom_toast_layout"
@@ -52,7 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+
+
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#CD96CD"
@@ -88,6 +44,36 @@
             android:gravity="center"
             android:background="#CD96CD"
             android:text="TEXT" />
-    </LinearLayout>
+    </LinearLayout>-->
+
+    <!--<Button
+        android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
+        android:onClick="createDatabase" android:scaleY=".75"
+        android:text="Create Database"
+        />-->
+
+    <!--<Button
+        android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
+        android:onClick="deleteDatabase" android:scaleY=".75"
+        android:text="Delete Database"
+        />-->
+
+    <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Name                    ID               Location"
+            android:gravity="center"
+            android:textColor="#000">
+
+    </TextView>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/sample_list">
+
+    </ListView>
+
 
 </LinearLayout>
